[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["tyanakaz"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.3"
jupyter = "^1.0.0"
selenium = "^3.141.0"
oandapyV20 = "^0.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
